# UnifiedAPI-mvp

./: .gitignore  CHANGELOG.md  DEPENDENCY_VERSIONS.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  README.md  SETUP.md  TEST_CHECKLIST.md  UPDATE_SUMMARY.md  architecture unifiedapi multi-service.txt  architecture unifiedapi mvp(confidential).txt  mvp-platform-plan.md  typescript-sdk-completion-plan.txt  upgraded-mvp-plan.md
backend/: .env.example  .eslintrc.json  .gitignore  2.9.0  Dockerfile  IMPLEMENTATION.md  README.md  debug-server.ts  diagnose.ts  docker-compose.yml  env.example  eslint.config.js  migrate_credentials.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
backend/app/: __init__.py  auth.py  config.py  dependencies.py  errors.py  logging.py  main.py  models.py  rate_limiting.py
backend/app/api_keys/: __init__.py  routes.py
backend/app/customers/: __init__.py  routes.py
backend/app/payments/: __init__.py  admin_routes.py  audit.py  credential_service.py  encryption.py  errors.py  routes.py  service.py  types.py
backend/app/payments/providers/: __init__.py  base.py  paypal.py  stripe.py
backend/app/services/: key_management_service.py
backend/app/webhooks/: __init__.py  stripe.py
backend/db/: README.md
backend/db/migrations/: 001_initial_schema.sql  002_remove_plain_api_keys.sql  003_add_performance_indexes.sql  004_add_user_id_to_customers.sql  005_add_payment_provider_credentials.sql  006_add_sdk_payment_fields.sql
backend/src/: server.ts
backend/src/adapters/: base.ts  paypal.ts  stripe.ts
backend/src/api/middleware/: auth.ts  errorHandler.ts  logging.ts  rateLimit.ts
backend/src/api/normalizers/: request.ts  response.ts
backend/src/api/routes/: apiKeys.ts  customers.ts  payments.ts  webhooks.ts
backend/src/repositories/: apiKeyRepository.ts  auditRepository.ts  customerRepository.ts
backend/src/types/: payment.test.ts  payment.ts
backend/src/utils/: cache.ts  logger.ts  supabase.ts
backend/tests/: __init__.py  normalizers.test.ts  paymentRoutes.test.ts  repositories.test.ts  routes.test.ts  test_auth.py  test_errors.py  test_health.py  test_payments.py  test_rate_limiting.py
frontend/: .env.example  (+8 more)
(+69 files in other folders)
